--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "nuxt": "^2.15.7",
     "superagent": "^6.1.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "vue-lodash": "^2.1.2",
+    "vue-moment": "^4.1.0",
+    "vue-perfect-scrollbar": "^0.2.1",
+    "vue-scrollto": "^2.20.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
