--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.1",
+    "babel-eslint": "10.1.0",
+    "@nuxtjs/eslint-config": "5.0.0",
+    "eslint": "7.19.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-nuxt": "2.0.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-vue": "7.5.0",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
